# dbt-dummy

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: dbt_coverage.yml
dbt_project/: .gitignore  dbt_project.yml  pyproject.toml
dbt_project/customer/: dbt_project.yml  packages.yml
dbt_project/customer/dbt_packages/: shared_models
dbt_project/customer/models/marts/: cumulative_revenue.sql
dbt_project/models/: schema.yml
dbt_project/original_dbt/: dbt_project.yml
dbt_project/profiles/: .user.yml  profiles.yml
dbt_project/rental/: dbt_project.yml
dbt_project/rental/models/staging/: _staging_models.yml  _staging_sources.yml  stg_rental.sql
dbt_project/shared_dbt/: dbt_project.yml
dbt_project/shared_dbt/models/staging/: stg_customer.sql  stg_film.sql
dbt_project/shared_models/: .gitignore  dbt_project.yml
dbt_project/shared_models/models/staging/: _staging_models.yml  _staging_sources.yml  stg_category.sql
